# libmetal

./: .gitignore  CMakeLists.txt
examples/system/linux/: CMakeLists.txt
examples/system/linux/x86_64/: CMakeLists.txt
examples/system/linux/x86_64/vfio_pci_demo/: CMakeLists.txt  vfio_pci_demo.c
lib/: CMakeLists.txt  bus.c  bus.h  device.h  uio.h  vfio.h
lib/system/linux/: CMakeLists.txt  device.c  uio.c  vfio.c
